2011-01-03  Ingo Weinzierl <ingo@intevation.de>

	* reports/probenahmeauftrag.jrxml: Das Feld "handgeschöpft" wurde in
	  "handgeschöpft mit Becherglas" umbenannt. Außerdem gibt es rechts daneben
	  nun ein Feld "sonstiges", in dem die Verwendung anderer Entnahmegeräte
	  festgehalten werden kann.

2011-01-03  Ingo Weinzierl <ingo@intevation.de>

	* reports/probenahmeauftrag.jrxml: Bugfix: Die Seitenzahl wird nun auf jeder
	  Seite korrekt angezeigt.

2011-01-03  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Die zu beprobenden Parameter werden nun in die Parameterliste eingefüllt.
	  Es werden also keine statischen Daten mehr angezeigt.

	* src/de/bielefeld/umweltamt/aui/utils/JRMapDataSource.java: Es gibt nun
	  einen weiteren Konstruktor, der als Parameter ein Object[][] erwartet,
	  welches die Zeilen und Spalten enthält, die in die Parameterliste des
	  Probenahmeauftrags gefüllt werden sollen.

	* src/de/bielefeld/umweltamt/aui/mappings/atl/AtlProbenahmen.java: Eine
	  weitere Funktion getDataSource() liefert ein JRMapDataSource Objekt einer
	  vorhandenen Probenahme.

2010-12-21  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Der Probenahmenauftrag wird mit einer JRMapDataSource gefüllt, welche
	  die Liste der zu beprobenden Parameter enthält. An dieser Stelle muss
	  noch dafür gesorgt werden, dass die richtigen Parameter in die
	  JRMapDataSource gefüllt werden.

	* src/de/bielefeld/umweltamt/aui/utils/JRMapDataSource.java: Dies wird
	  eine Datenquelle, die die zu beprobenden Parameter enthält. Zur Zeit
	  werden nur statische Daten geliefert.

	* src/de/bielefeld/umweltamt/aui/utils/PDFExporter.java: Die Parameter für
	  den Subreport werden hier beim Probenahmeauftrag-Export hinzugefügt.
	  Außerdem wird generell für einen Probenahmeauftrag, sowie für den